# IOT-Data-Pipeline-Project

./: .gitignore  INSTRUCTIONS.md  README.md  SETUP_INSTRUCTIONS.md
.github/workflows/: ci.yml
zebra-smart-factory/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  RESUME_BULLETS.md  docker-compose.yml  pyproject.toml  requirements.txt
zebra-smart-factory/app/: main.py
zebra-smart-factory/app/api/: dashboard.py
zebra-smart-factory/app/api/v1/: analytics.py  telemetry.py
zebra-smart-factory/app/core/: config.py  database.py
zebra-smart-factory/app/models/: __init__.py  sensor.py
zebra-smart-factory/app/schemas/: analytics.py  telemetry.py
zebra-smart-factory/app/services/: charts.py  maintenance_agent.py  spc.py
zebra-smart-factory/dags/: daily_summary.py  iot_ingestion.py
zebra-smart-factory/data_simulator/: run.py  simulator.py
zebra-smart-factory/tests/: conftest.py  test_api.py  test_spc.py
