[project]
name = "zebra-smart-factory"
version = "1.0.0"
description = "IoT monitoring ecosystem for Industry 4.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
